--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
+
 <head>
-	<title> jQuery Mobile Boilerplate </title>
+	<title> Save The Animals Fun Ride </title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,10 +37,11 @@
 	<script src="js/jquery.mobile-1.4.0.js"></script>
 	<script src="js/application.js"></script>
 	<!-- Startup Images for iDevices -->
-	<script>(function(){var a;if(navigator.platform==="iPad"){a=window.orientation!==90||window.orientation===-90?"images/startup-tablet-landscape.png":"images/startup-tablet-portrait.png"}else{a=window.devicePixelRatio===2?"images/startup-retina.png":"images/startup.png"}document.write('<link rel="apple-touch-startup-image" href="'+a+'"/>')})()</script>
+	<script>(function () { var a; if (navigator.platform === "iPad") { a = window.orientation !== 90 || window.orientation === -90 ? "images/startup-tablet-landscape.png" : "images/startup-tablet-portrait.png" } else { a = window.devicePixelRatio === 2 ? "images/startup-retina.png" : "images/startup.png" } document.write('<link rel="apple-touch-startup-image" href="' + a + '"/>') })()</script>
 	<!-- The script prevents links from opening in mobile safari. https://gist.github.com/1042026 -->
-	<script>(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(d.href.indexOf("http")||~d.href.indexOf(e.host))&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone")</script>
+	<script>(function (a, b, c) { if (c in b && b[c]) { var d, e = a.location, f = /^(a|html)$/i; a.addEventListener("click", function (a) { d = a.target; while (!f.test(d.nodeName)) d = d.parentNode; "href" in d && (d.href.indexOf("http") || ~d.href.indexOf(e.host)) && (a.preventDefault(), e.href = d.href) }, !1) } })(document, window.navigator, "standalone")</script>
 </head>
+
 <body>
 	<div data-role="page">
 
@@ -67,4 +69,5 @@
 
 	</div>
 </body>
+
 </html>
